--- a/Lab2/Ops/monitor_agent_setup.yml
+++ b/Lab2/Ops/monitor_agent_setup.yml
@@ -26,7 +26,7 @@
     # Install Python and the Zabbix Agent
     - name: Install Python and Zabbix Agent
       ansible.builtin.yum:
-        name: {{ item }}
+        name: "{{ item }}"
         state: latest
         with_items:
           - python3
