Hopefully Fix Monitor Agent Setup

--- a/Lab2/Ops/monitor_agent_setup.yml
+++ b/Lab2/Ops/monitor_agent_setup.yml
@@ -29,8 +29,8 @@
         name: "{{ item }}"
         state: latest
         with_items:
-          - python3
-          - zabbix-agent
+          - "python3"
+          - "zabbix-agent"
 
     # Copy the Zabbix Agent Config Template
     - name: Write the Zabbix Agent Config File
