--- a/Lab3/Ops/loadbalancer_setup.yml
+++ b/Lab3/Ops/loadbalancer_setup.yml
@@ -32,6 +32,11 @@
       ansible.builtin.copy:
         src: /etc/hosts
         dest: /etc/hosts
+
+    - name: Create Logs Dir
+      ansible.builtin.file:
+        name: /etc/nginx/logs
+        state: directory
         
     - name: Create Error Logs
       ansible.builtin.file:
