--- a/Lab3/Ops/loadbalancer_setup.yml
+++ b/Lab3/Ops/loadbalancer_setup.yml
@@ -33,11 +33,16 @@
         src: /etc/hosts
         dest: /etc/hosts
 
+    - name: Create User
+      ansible.builtin.user:
+        name: www
+        state: present
+
     - name: Create Logs Dir
       ansible.builtin.file:
         name: /etc/nginx/logs
         state: directory
-        mode: 0666
+        owner: www
         
     - name: Create Error Logs
       ansible.builtin.file:
