--- a/Lab3/Ops/loadbalancer_uninstall.yml
+++ b/Lab3/Ops/loadbalancer_uninstall.yml
@@ -19,6 +19,11 @@
         name: /etc/nginx
         state: absent
 
+    - name: Remove User
+      ansible.builtin.user:
+        name: www
+        state: absent
+
     # Remove the Nginx yum Repository
     - name: Remove Repository
       ansible.builtin.yum_repository:
