--- a/Lab3/Ops/loadbalancer_setup.yml
+++ b/Lab3/Ops/loadbalancer_setup.yml
@@ -33,16 +33,21 @@
         src: /etc/hosts
         dest: /etc/hosts
 
-    # - name: Create Logs Dir
-    #   ansible.builtin.file:
-    #     name: /etc/nginx/logs
-    #     state: directory
+    - name: Create Logs Dir
+      ansible.builtin.file:
+        name: /etc/nginx/logs
+        state: directory
+        owner: root
+        group: root
+        mode: 0644
         
-    # - name: Create Error Logs
-    #   ansible.builtin.file:
-    #     name: /etc/nginx/logs/error.log
-    #     state: touch
-    #     mode: 0666
+    - name: Create Error Logs
+      ansible.builtin.file:
+        name: /etc/nginx/logs/error.log
+        state: touch
+        owner: root
+        group: root
+        mode: 0644
 
     - name: Restart Nginx
       ansible.builtin.systemd:
