Adjust Nginx Config, Comment Out Potentially Unnecessary Tasks

--- a/Lab3/Ops/loadbalancer_uninstall.yml
+++ b/Lab3/Ops/loadbalancer_uninstall.yml
@@ -19,10 +19,10 @@
         name: /etc/nginx
         state: absent
     
-    - name: Remove User
-      ansible.builtin.user:
-        name: www-data
-        state: absent
+    # - name: Remove User
+    #   ansible.builtin.user:
+    #     name: www-data
+    #     state: absent
 
     # Remove the Nginx yum Repository
     - name: Remove Repository
