--- a/Lab3/Ops/loadbalancer_setup.yml
+++ b/Lab3/Ops/loadbalancer_setup.yml
@@ -33,26 +33,26 @@
         src: /etc/hosts
         dest: /etc/hosts
 
-    - name: Create User
-      ansible.builtin.user:
-        name: www-data
-        state: present
+    # - name: Create User
+    #   ansible.builtin.user:
+    #     name: www-data
+    #     state: present
 
-    - name: Create Logs Dir
-      ansible.builtin.file:
-        name: /etc/nginx/logs
-        state: directory
-        owner: www-data
-        group: www-data
-        mode: 0755
+    # - name: Create Logs Dir
+    #   ansible.builtin.file:
+    #     name: /etc/nginx/logs
+    #     state: directory
+    #     owner: www-data
+    #     group: www-data
+    #     mode: 0755
         
-    - name: Create Error Logs
-      ansible.builtin.file:
-        name: /etc/nginx/logs/error.log
-        state: touch
-        owner: www-data
-        group: www-data
-        mode: 0755
+    # - name: Create Error Logs
+    #   ansible.builtin.file:
+    #     name: /etc/nginx/logs/error.log
+    #     state: touch
+    #     owner: www-data
+    #     group: www-data
+    #     mode: 0755
 
     - name: Restart Nginx
       ansible.builtin.systemd:
