--- a/Lab3/Sec/Lab3SecTest.yml
+++ b/Lab3/Sec/Lab3SecTest.yml
@@ -19,30 +19,30 @@
     - name: Print Lab 1 Sec Test Script Output
       debug: var=output.stdout_lines
 
-    - name: Run Modified Lab 2 Load Test Expected Load
-      delegate_to: localhost
-      ansible.builtin.expect:
-        command: /usr/bin/bash /home/student/Desktop/Config-Crew/Lab3/Sec/Lab3LoadTest.sh
-        responses:
-          Please enter IP Address to Test: "{{ hostvars[groups['loadBalancer'][0]]['ansible_host'] }}"
-          Please select a load:
-            - "E"
-            - "Q"
-      register: expectedout
+    # - name: Run Modified Lab 2 Load Test Expected Load
+    #   delegate_to: localhost
+    #   ansible.builtin.expect:
+    #     command: /usr/bin/bash /home/student/Desktop/Config-Crew/Lab3/Sec/Lab3LoadTest.sh
+    #     responses:
+    #       Please enter IP Address to Test: "{{ hostvars[groups['loadBalancer'][0]]['ansible_host'] }}"
+    #       Please select a load:
+    #         - "E"
+    #         - "Q"
+    #   register: expectedout
 
-    - name: Print Lab 2 Load Test Expected Load Output
-      debug: var=expectedout.stdout_lines[-14:-2]
+    # - name: Print Lab 2 Load Test Expected Load Output
+    #   debug: var=expectedout.stdout_lines[-14:-2]
 
-    - name: Run Modified Lab 2 Load Test Overload
-      delegate_to: localhost
-      ansible.builtin.expect:
-        command: /usr/bin/bash /home/student/Desktop/Config-Crew/Lab3/Sec/Lab3LoadTest.sh
-        responses:
-          Please enter IP Address to Test: "{{ hostvars[groups['loadBalancer'][0]]['ansible_host'] }}"
-          Please select a load:
-            - "O"
-            - "Q"
-      register: overloadout
+    # - name: Run Modified Lab 2 Load Test Overload
+    #   delegate_to: localhost
+    #   ansible.builtin.expect:
+    #     command: /usr/bin/bash /home/student/Desktop/Config-Crew/Lab3/Sec/Lab3LoadTest.sh
+    #     responses:
+    #       Please enter IP Address to Test: "{{ hostvars[groups['loadBalancer'][0]]['ansible_host'] }}"
+    #       Please select a load:
+    #         - "O"
+    #         - "Q"
+    #   register: overloadout
 
-    - name: Print Lab 2 Load Test Overload Output
-      debug: var=overloadout.stdout_lines[-14:-2]
+    # - name: Print Lab 2 Load Test Overload Output
+    #   debug: var=overloadout.stdout_lines[-14:-2]
