--- a/Lab3/Sec/Lab3SecTest.yml
+++ b/Lab3/Sec/Lab3SecTest.yml
@@ -23,6 +23,7 @@
       delegate_to: localhost
       ansible.builtin.expect:
         command: /usr/bin/bash /home/student/Desktop/Config-Crew/Lab3/Sec/Lab3LoadTest.sh
+        timeout: null
         responses:
           "Please enter": "{{ hostvars[groups['loadBalancer'][0]]['ansible_host'] }}"
           "Please select":
@@ -37,6 +38,7 @@
       delegate_to: localhost
       ansible.builtin.expect:
         command: /usr/bin/bash /home/student/Desktop/Config-Crew/Lab3/Sec/Lab3LoadTest.sh
+        timeout: null
         responses:
           "Please enter": "{{ hostvars[groups['loadBalancer'][0]]['ansible_host'] }}"
           "Please select":
