--- a/Lab3/Ops/loadbalancer_setup.yml
+++ b/Lab3/Ops/loadbalancer_setup.yml
@@ -1,9 +1,9 @@
 ---
 # Depends on ansible.posix
 
-######################################################
-# Config Crew Ops Team Monitor Server Setup Playbook #
-######################################################
+###########################################################
+# Config Crew Ops Team Loadbalancer Server Setup Playbook #
+###########################################################
 
 # Usage: ansible-playbook loadbalancer_setup.yml
 
